[package]
name = "streamlet-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamlet = { path = "../../streamlet" }
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures = "0.3"